# xsnow

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  xsnow.c
pixmaps/RCS/: BigSanta1.XPM,v  BigSanta2.XPM,v  BigSanta3.XPM,v  BigSanta4.XPM,v  BigSantaRudolf1.XPM,v  BigSantaRudolf2.XPM,v  BigSantaRudolf3.XPM,v  BigSantaRudolf4.XPM,v  MediumSanta1.XPM,v  MediumSanta2.XPM,v  MediumSanta3.XPM,v  MediumSanta4.XPM,v  MediumSantaRudolf1.XPM,v  MediumSantaRudolf2.XPM,v  MediumSantaRudolf3.XPM,v  MediumSantaRudolf4.XPM,v  RegularSanta1.XPM,v  RegularSanta2.XPM,v  RegularSanta3.XPM,v  RegularSanta4.XPM,v  RegularSantaRudolf1.XPM,v  RegularSantaRudolf2.XPM,v  RegularSantaRudolf3.XPM,v  RegularSantaRudolf4.XPM,v  snow00.xbm,v  snow01.xbm,v  snow02.xbm,v  snow03.xbm,v  snow04.xbm,v  snow05.xbm,v  snow06.xbm,v  tannenbaum.xbm,v
